Fix issues with main menu bar alignment
Also prevent blank menus if no translation has been implemented yet

--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -86,7 +86,7 @@
   }
 
   .main-navbar {
-    min-width: 50%;
+    min-width: 60%;
 
     // Hide hamburger toggle
     label[for='hb-toggle'],
@@ -108,7 +108,6 @@
       > li {
         list-style: none;
         text-align: center;
-        white-space: break-spaces;
       }
       > li:last-child {
         margin-right: 0;
@@ -116,6 +115,7 @@
 
       > li > a {
         @extend .button;
+        white-space: break-spaces;
       }
       > li > a:hover {
         border-color: $beige;
